2007-01-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (error-handler): new defun
	(stumpwm): set error handler

	* core.lisp (set-font): use the first font that matches

	* stumpwm.lisp (stumpwm-internal-loop): handle window-error and
	drawable-error errors

	* core.lisp (handle-event): remove handler-case

2007-01-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (window-send-string): handle RET and TAB

	* core.lisp (key-to-keycode+state): new function
	(send-fake-key): use key-to-keycode+state

	* input.lisp (draw-input-bucket): make room for the cursor

	* primitives.lisp (*debug-level*): new defvar
	(*debug-stream*): likewise
	(dformat): send output to *debug-stream*

	* user.lisp ("move-focus"): use error for invalid directions

	* stumpwm.lisp (stumpwm): call display-finish-output after each init-screen

	* core.lisp (echo-string-list): run *message-hook* hook

2007-01-21  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (xwin-screen): remove. all callers updated.
	(focus-window): don't call display-finish-output
	(maximize-window): call display-finish-output, not display-force-output
	(draw-frame-numbers): likewise
	(show-frame-indicator): likewise
	(echo-string-list): likewise
	(init-screen): likewise
	(:configure-request): likewise
	(:key-press): likewise

2007-01-20  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.asd: only require :clx in sbcl

2007-01-17  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (show-frame-indicator): clear the frame indicator on
	all other screens.

	* user.lisp ("ratclick"): new function

	* core.lisp (send-fake-click): new function

	* user.lisp ("snext"): force the frame indicator to show
	("sprev"): likewise
	("sother"): likewise

2007-01-15  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind mark to C-t # and lastmsg back to m
	and C-m. Bind C-t C-t to other-in-frame.

	* input.lisp (input-find-completions): properly match strings
