@@ -62,7 +62,7 @@ loaded."
   (case error-key
     ((or xlib:window-error xlib:drawable-error)
      ;; ignore
-     )
+     (dformat 4 "Ignoring error: ~s~%" error-key))
     ;; all other errors are thrown and caught at the top level where
     ;; stumpwm quits, basically.
     (t
@@ -104,15 +104,6 @@ loaded."
 		 ;; flush any pending output. You'd think process-event would, but
 		 ;; it seems not.
 		 (xlib:display-finish-output *display*))
-	     ((or xlib:drawable-error xlib:window-error) ()
-	       ;; This is generally the error we get when
-	       ;; attempting to focus a window that's been
-	       ;; destroyed. Give a warning and ignore
-	       ;; it. It will be taken care of in the unmap
-	       ;; and destroy events we'll be getting
-	       ;; shortly.
-	       ;;(warn "Caught ~s in ~s event handler." c event-key)
-	       )
 	     (error (c)
 	       (ecase *top-level-error-action*
 		 (:message
